[package]
name = "diy-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "step01"
path = "src/step01.rs"

[[bin]]
name = "step02"
path = "src/step02.rs"

[[bin]]
name = "step03"
path = "src/step03.rs"

[[bin]]
name = "step04"
path = "src/step04.rs"

[[bin]]
name = "step05"
path = "src/step05.rs"